...
        tableView.action = #selector(tableViewClicked(_:))
        tableView.menu = createContextMenu()
        tableView.menu?.delegate = self // Set menu delegate
        
        tableView.registerForDraggedTypes([.string, .fileURL])
        tableView.setDraggingSourceOperationMask(.move, forLocal: true)
        tableView.setAccessibilityIdentifier("FavoritesTable")
        
        let column = NSTableColumn(identifier: NSUserInterfaceItemIdentifier("FavoritesColumn"))
        column.width = 180
        tableView.addTableColumn(column)
        
        let scrollView = NSScrollView()
...
        
        // Default Favorites
        let homeURL = fileManager.homeDirectoryForCurrentUser
        let desktopURL = homeURL.appendingPathComponent("Desktop")
        let documentsURL = homeURL.appendingPathComponent("Documents")
        let downloadsURL = homeURL.appendingPathComponent("Downloads")
        let applicationsURL = URL(fileURLWithPath: "/Applications")
        
        // Use system icons
        let folderIcon = Self.folderGlyph
        let desktopIcon = NSImage.mfeSymbol(named: "desktopcomputer", accessibilityDescription: nil) ?? folderIcon
        let documentIcon = NSImage.mfeSymbol(named: "doc", accessibilityDescription: nil) ?? folderIcon
        let downloadIcon = NSImage.mfeSymbol(named: "arrow.down.circle", accessibilityDescription: nil) ?? folderIcon
...
